Added placeholder text for a quiz
- Added some css styles to background

--- a/src/app/trivia/trivia.component.html
+++ b/src/app/trivia/trivia.component.html
@@ -1,5 +1,19 @@
-<div style="text-align:center">
-  <h1>
-    Trivia
-  </h1>
+<div class="container" style="text-align:center">
+  <div class="page-header">
+    <h1>Trivia</h1>
+  </div>
+
+<div>
+
+  <h2>Angular quiz</h2>
+  <h3>Quiz instructions</h3>
+  <div>
+    <h3>Question text</h3>
+      <div class="options">
+        <input type="radio" name="question1" value="a">
+        <label>A. Option A</label>
+      </div>
+  </div>
+</div>
+
 </div>
