--- a/src/app/trivia/trivia.component.html
+++ b/src/app/trivia/trivia.component.html
@@ -5,13 +5,13 @@
 
 <div>
 
-  <h2>Angular quiz</h2>
-  <h3>Quiz instructions</h3>
+  <h2>{{quiz}}</h2>
+  <h3>{{instructions}}</h3>
   <div>
-    <h3>Question text</h3>
+    <h3>{{trivia.name}}</h3>
       <div class="options">
         <input type="radio" name="question1" value="a">
-        <label>A. Option A</label>
+        <label><h4>{{trivia.choice}}</h4></label>
       </div>
   </div>
 </div>
