Fix broken code

--- a/src/app/trivia/trivia.component.html
+++ b/src/app/trivia/trivia.component.html
@@ -8,10 +8,10 @@
   <h2>{{quiz}}</h2>
   <h3>{{instructions}}</h3>
   <div>
-    <h3>{{trivia.name}}</h3>
+    <h3>{{question}}</h3>
       <div class="options">
         <input type="radio" name="question1" value="a">
-        <label><h4>{{trivia.choice}}</h4></label>
+        <label><h4>choices</h4></label>
       </div>
   </div>
 </div>
