Added background image
- Added new images folder and image
- Changed font color to survey component

--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -3,15 +3,17 @@
 <div class="container">
     <h2>Favorite food survey</h2>
     <form>
-      <div class="form-group">
+      {{diagnostic}}<br>
+      <div class="form-group col-md-6">
         <label for="question">What's your favorite food?'</label><br>
         <label for="options">Options:</label>
         <select class="form-control" id="options" required>
           <option *ngFor="let option of options" [value]="option">{{option}}</option>
         </select>
+        <button type="submit" class="btn btn-success" (click)="onSubmit()">Submit</button>
+        <br>{{submitMessage}}
       </div>
 
-      <button type="submit" class="btn btn-success">Submit</button>
 
     </form>
 </div>
