--- a/src/app/surveys/surveys.component.css
+++ b/src/app/surveys/surveys.component.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   border: 1px solid #000;
   border-radius: 5px;
-}
-
-.container {
+  margin: 0 15px 0 15px;
   width: 100%;
+  background-color: #fff;
+  color: #000;
 }
