--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
     <li class="nav-item active">
       <a class="nav-link" routerLink="surveys">Take a Survey</a>
     </li>
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="about">About</a>
+    </li>
   </ul>
 </nav>
   <div class="container">
