--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,7 @@
 </nav>
   <div class="container">
     <router-outlet></router-outlet>
+    <footer><hr>Made by Alicia Pflaumer<br>
+    <a href="https://github.com/aliciapflaumer">Github</a> | <a href="https://www.linkedin.com/in/aliciapflaumer/">LinkedIn</a></footer>
   </div>
 </div>
