--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
     <li class="nav-item active">
       <a class="nav-link" routerLink="surveys">Take a Survey</a>
     </li>
-    <li class="nav-item active">
+    <!-- <li class="nav-item active">
       <a class="nav-link" routerLink="about">About</a>
-    </li>
+    </li> -->
   </ul>
 </nav>
   <div class="container">
