--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,18 +1,20 @@
 <div class="container">
   <h1>{{welcome}}</h1>
   <p>{{content}}</p>
-  <h2>My favorite hero is: {{myHero.name | uppercase}}</h2>
   <ul>
     <!-- using ngfor to dsplay an array of items -->
     <!-- <li *ngFor="let hero of heroes">{{hero.name}}</li> -->
     <li>
-      <select>
+      <h3>Select new hero:</h3>
+      <select [(ngModel)]="selectedValue">
         <option *ngFor="let hero of heroes">
-        {{hero.id}}. {{hero.name}}
+        {{hero.name}}
         </option>
       </select>
     </li>
   </ul>
+  <h2>Your favorite hero is: {{selectedValue | uppercase}}</h2>
   <!-- use ngIf to display a message if there are more than 3 names in list -->
   <!-- <p *ngIf="heroes.length > 3">There are many heroes!</p> -->
+
 </div>
