--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -1,8 +1,8 @@
-<h1>{{welcome}}</h1>
+<!-- <h1>{{welcome}}</h1> -->
 
 <div class="container">
     <form>
-      <h2>Favorite food survey</h2>
+      <h2>Food survey</h2>
       <div class="form-group col-md-6">
         <label for="question">What's your favorite food?'</label><br>
         <label for="options">Options:</label>
