--- a/src/styles.css
+++ b/src/styles.css
@@ -3,22 +3,14 @@ body {
   background-image: url('assets/images/background-1200h-patrick-tomasso.png');
   background-size: cover;
   color: #fff;
+  text-align: center;
 }
 
-footer a {
-  color: #fff;
+footer {
+  background-color: #fff;
+  color: #000;
 }
 
 footer a:hover {
-  color: yellow;
-}
-
-footer a:link {
-  color: #fff;
-}
-
-footer hr {
-  background-color: yellow;
-  border: 0;
-  height: 2px;
+  color: lightblue;
 }
