--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div style="text-align:center">
-
-  <nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded">
   <ul class="nav navbar-nav">
     <li class="nav-item active">
       <a class="nav-link" routerLink="/">Home</a>
@@ -18,7 +16,6 @@
 </nav>
   <div class="container">
     <router-outlet></router-outlet>
-    <footer><hr>Made by Alicia Pflaumer<br>
+    <footer class="navbar navbar-fixed-bottom">Made by Alicia Pflaumer<br>
     <a href="https://github.com/aliciapflaumer">Github</a> | <a href="https://www.linkedin.com/in/aliciapflaumer/">LinkedIn</a></footer>
   </div>
-</div>
